force-app/src/objects/ffct__ConsultantToolConfigurationSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ffct__Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffct__MaximumQueueSize__c</fullName>
        <label>Maximum Queue Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffct__Recipients__c</fullName>
        <label>Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffct__Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Notification</label>
        <type>Checkbox</type>
    </fields>
    <label>Consultant Tool Configuration Setting</label>
</CustomObject>